--- a/index.html
+++ b/index.html
@@ -10,13 +10,46 @@
 </head>
 
 <body>
-    <div class="encabezado"><h1 style="color: white; font-size: 70px;">𝓣𝓪𝓻𝓸𝓽</h1></div>
+    <div class="encabezado">
+        <h1 style="color: white; font-size: 70px;">𝓣𝓪𝓻𝓸𝓽</h1>
+    </div>
     <div class="cuerpo">
         <div class="boton">
             <button class="accion">Tirar</button>
         </div>
         <div class="resultado"></div>
     </div>
+    <div class="encabezado">
+        <h1 style="color: white; font-size: 70px;">𝓓𝓪𝓭𝓸</h1>
+    </div>
+    <div class="cuerpo2">
+
+        <div class="dice" onclick="rollDice()">
+            <div class="dot center"></div>
+            <div class="dot top-left"></div>
+            <div class="dot top-right"></div>
+            <div class="dot bottom-left"></div>
+            <div class="dot bottom-right"></div>
+            <div class="dot top-center"></div>
+            <div class="dot bottom-center"></div>
+        </div>
+
+
+    </div>
+
+    <div class="encabezado">
+        <h1 style="color: white; font-size: 70px;">𝓜𝓸𝓷𝓮𝓭𝓪</h1>
+    </div>
+    <div class="cuerpo3">
+        <div class="container" onclick="flipCoin()">
+            <div class="coin" id="coin">
+                <div class="side heads"></div>
+                <div class="side tails"></div>
+            </div>
+        </div>
+    </div>
+    
+
 </body>
 
 </html>
