--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
             <button class="accion">Tirar</button>
         </div>
         <div class="resultado"></div>
+        <div class="lista">
+            <h2 style="text-align: center;">Tus cartas</h2>
+            <div class="tulista"></div>
+        </div>
     </div>
     <div class="encabezado">
         <h1 style="color: white; font-size: 70px;">𝓓𝓪𝓭𝓸</h1>
@@ -48,7 +52,7 @@
             </div>
         </div>
     </div>
-    
+
 
 </body>
 
