--- a/index.html
+++ b/index.html
@@ -53,6 +53,24 @@
         </div>
     </div>
 
+    <div class="encabezado" style="margin-top: 80px;">
+        <h1 style="color: white; font-size: 50px;">𝓓𝓸𝓷 𝓔𝓶𝓲𝓵𝓲𝓸</h1>
+    </div>
+
+    <div class="cuerpo4">
+        <div class="sumar">
+            <div class="fila">
+                <p class="item">Nombre</p>
+                <input type="text" class="cuadroT item">
+            </div>
+            <div class="fila">
+                <p class="item">Puntuación</p>
+                <input type="text" class="cuadroP item">
+            </div>
+            <button id="anadir">Nuevo</button>
+        </div>
+        <div class="clasificacion"></div>
+    </div>
 
 </body>
 
