--- a/donEmilio.html
+++ b/donEmilio.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/donEmilio.css">
-    <script type="module" src="js/script.js"></script> <!-- Tu script donde controlas la lógica -->
+    <script type="module" src="js/donEmilio.js"></script> <!-- Tu script donde controlas la lógica -->
 
-    <title>Document</title>
+    <title>Don Emilio</title>
 </head>
 
 <body>
@@ -26,7 +26,7 @@
         <div class="clasificacion"></div>
     </div>
 
-    <button class="salir" onclick="location.href='index.html'">Salir</button>
+    <button class="salir" onclick="location.href='index.html'">↩</button>
 
     
 </body>
