--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="js/dado.js"></script>
     <script src="js/moneda.js"></script>
     <script src="js/donEmilio.js"></script>
-    <title>Document</title>
+    <title>Kodi</title>
 </head>
 
 <body>
